--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function calculate() {
             <button onclick="addToOutput('1')">1</button>
             <button onclick="addToOutput('2')">2</button>
             <button onclick="addToOutput('3')">3</button>
-            <button onclick="addToOutput('')"></button>
+            <button onclick="addToOutput('*')">*</button>
             <button onclick="addToOutput('0')">0</button>
             <button onclick="addToOutput('.')">.</button>
             <button onclick="clearOutput()">C</button>
